ButtonBacklight: Rework for bacon with CustomSeekBar [1/2]
Change-Id: I96cbd5c5d10e078bceb4908e9f604cb05e5eedf6

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -548,6 +548,6 @@
     <string name="backlight_timeout_30s">30 sec</string>
 
     <!-- Enable keys backlight-->
-    <string name="button_brightness_title">Enable backlight</string>
+    <string name="button_brightness_title">Backlight</string>
 
 </resources>
