--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -855,6 +855,7 @@
     <!-- Quick settings tiles columns and rows config -->
     <string name="qs_rows_portrait_title">Rows (portrait)</string>
     <string name="qs_rows_landscape_title">Rows (landscape)</string>
+    <string name="qs_layout_category">QS tiles layout</string>
     <string name="qs_columns_title">Columns</string>
     <string name="sysui_qqs_count_title">Small QS tiles</string>
     <string name="qs_tile_title_visibility_title">QS tile titles</string>
