[SQUASHED] Implement XOSP Blur personalization/Recents Blur options (2/2)
All credits for original work goes to serjar (Author of the very famous Xposed module: Blurred System UI)

Credits goes also to: Aaahh  for the initial implementation of it in MarshROM and continued by me after in XOSP

Original repository of the Xposed Module: https://github.com/serajr/Blurred-System-UI

Available options:

- Blurred expanded StatusBar
- Blurred StausBar header (Deprecated on N)
- Translucent Notifications
- Blurred QS in Notification Header expanded
- Ability to change Blur Radius and Blur scale

Squash all my previous commits from Marshmallow and adapt everything to work on N:

https://github.com/nilac8991/xosp_packages_apps_Settings/commit/fa720984e069731df43b46adadb87081af9bb518
https://github.com/nilac8991/xosp_packages_apps_Settings/commit/06fdcc89690054097a6a98a2525d62236d74d89c
https://github.com/nilac8991/xosp_packages_apps_Settings/commit/2f786e192d85fc7e6af871aee240fd714c77cdad

//TO-DO

- Adapt and finish Recents Blur code for Nougat
- Make Translucent Notifications work (Because right now it's completely wrong, so it will be cut off from Settings)

Signed-off-by: Calin <nilac8991@gmail.com>

Blur: Translucent notifications are not yet ready

Signed-off-by: Calin <nilac8991@gmail.com>

Blur: Fix maximum values for SeekBar Preferences

Signed-off-by: Calin <nilac8991@gmail.com>

As I said, not ready

Signed-off-by: Calin <nilac8991@gmail.com>

Blur: Implement Recents Blur (2/2)

- Implement basic implementation of serajr Recents blur
- Added the ability to change radius and scale on user side

Signed-off-by: Calin <nilac8991@gmail.com>

Blur: Update Blur Settings strings

- We know english better than that

Change-Id: Ic6c0b9ea4aefd956fd83ccb873c0d994be5fef55
Signed-off-by: Calin <nilac8991@gmail.com>
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -550,4 +550,35 @@
     <!-- Enable keys backlight-->
     <string name="button_brightness_title">Backlight</string>
 
+     <!-- Blur Personalizations -->
+    <string name="blur_settings">Blur Personalizations</string>
+    <string name="blurred_status_bar_expanded_enabled_pref">Blurred Expanded StatusBar</string>
+    <string name="blurred_status_bar_expanded_enabled_pref_summary">Blur the StatusBar background when pulled down</string>
+    <string name="translucent_notifications_pref">Translucent Notifications</string>
+    <string name="translucent_notifications_pref_summary">Set the background of notifications translucent</string>
+    <string name="translucent_quick_settings_pref">Blurred QS </string>
+    <string name="translucent_quick_settings_pref_summary">Blur the StatusBar QS background</string>
+    <string name="transluency_level_universal">Translucency level</string>
+    <string name="blurred_recent_app_enabled_pref">Blurred RecentsApps View</string>
+    <string name="blurred_recent_app_enabled_pref_summary">Blur the background of RecentApps View</string>
+    <string name="blur_light_color">Light Background Color Filter</string>
+    <string name="blur_dark_color">Dark Background Color Filter</string>
+    <string name="blur_mixed_color">Mixed Background Color Filter</string>
+    <string name="blur_notice">About Blur...</string>
+    <string name="blur_notice_summary">Blur personalizations are disabled during Keyguard view!</string>
+    <string name="blur_colors_notice">What are these colors doing?</string>
+    <string name="blur_colors_notice_summary">These colors are the ones tiniting the BlurBackground. Instead of the normal Grey, you can now choose the colors in the way you like. \n There are three color filters: One used for light backgrounds, one used for Dark backgrounds and one used for light/dark backgrounds. \n</string>
+    <string name="blur_expstatus_cat">Expanded StatusBar </string>
+    <string name="blur_notifications_cat">Notifications</string>
+    <string name="blur_qs_cat">Quick Settings</string>
+    <string name="blur_recents_cat">RecentApps</string>  
+    <string name="blur_colors_cat">Blur Color Filters</string>
+    <string name="blur_notices_cat">Notices</string>
+    <string name="blurred_scale">Blur Scale</string>
+    <string name="blurred_scale_summary">Quailty of blur image</string>
+    <string name="blurred_radius">Blur Radius</string>
+    <string name="blurred_radius_summary">Amount of blur</string>
+    <string name="blur_cat_notice">Notice</string>
+    <string name="blur_cat_notice_summary">Blur personlizations are disabled during Keyguard view! Only Translucent Notifications are enabled!</string>
+
 </resources>
