Blissify: Carrier Label Colors
Change-Id: I8a1ddb72416393190baf37311ade34d8c9f9001f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="statusbar_gestures_title">Gestures</string>
     <string name="headsup_settings_title">Heads Up</string>
     <string name="statusbar_bliss_logo">Bliss Logo</string>
+    <string name="statusbar_carrier_label">Carrier Label</string>
 
     <!-- Quick Settings -->
     <string name="quick_settings_title">Quick Settings</string>
@@ -440,7 +441,6 @@
     <string name="status_bar_logo_position_left">Left</string>
 
     <!-- Custom carrier label and position -->
-    <string name="statusbar_carrier_label">Carrier Label</string>
     <string name="custom_carrier_label_title">Custom carrier label</string>
     <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
     <string name="custom_carrier_label_notset">Custom label currently not set</string>
@@ -449,5 +449,6 @@
     <string name="show_carrier_keyguard">Lockscreen only</string>
     <string name="show_carrier_statusbar">Statusbar only</string>
     <string name="show_carrier_enabled">Lockscreen &amp; statusbar</string>
+    <string name="status_bar_carrier_color">Carrier label color</string>
 
 </resources>
