Repurpose SystemUI tuner for Blissify [2/2] *launch statusbar icon blacklist *launch navbar tuner *launch power notification controls
Hide Navbar tuner

*Smartbar pretty much does a better job

Change-Id: Idec0fbc3694a17e2ab31543bdbe5135393b4ea9a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -413,6 +413,18 @@
     <string name="power_menu_lockdown_title">Device lockdown</string>
     <string name="power_menu_bug_report_title">Bug report</string>
     <string name="power_menu_sound_title">Sound panel</string>
-    <string name="power_menu_bug_report_disabled">Bug reporting is disabled in development settings</string>  
+    <string name="power_menu_bug_report_disabled">Bug reporting is disabled in development settings</string>
+
+    <!-- Statusbar icon blacklist -->
+    <string name="status_bar_icon_blacklist_title">Status bar icons</string>
+    <string name="status_bar_icon_blacklist_summary">Configure what icons are shown on status bar</string>
+
+    <!-- Power notification controls -->
+    <string name="power_notification_title">Power notification controls</string>
+    <string name="power_notification_summary">Advanced notification controls and information</string>
+
+    <!-- Navbar tuner -->
+    <string name="navbar_tuner_title">Navbar tuner</string>
+    <string name="navbar_tuner_summary">Customize buttons and layout</string>
 
 </resources>
