Option to disable music track title in QS tile [2/2]
Change-Id: I144b64457b2c0cdaabc2f1b8bdbd3d8aec076257

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -814,4 +814,7 @@
     <string name="power_menu_animation_translucent_top">Translucent (top)</string>
     <string name="power_menu_animation_translucent_bottom">Translucent (bottom)</string>
 
+    <!-- Disable music track title in QS tile -->
+    <string name="qs_music_tile_track_optional_title">Music tile track title</string>
+    <string name="qs_music_tile_track_optional_summary">Show the music track title as the QS tile title</string>
 </resources>
