--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -749,4 +749,8 @@
     <!-- Lockscreen Tweaks -->
     <string name="lockscreen_tweaks_title">Lock Tweaks</string>
 
+    <!-- Lockscreen charging current indicator  -->
+    <string name="lockscreen_charging_current_title">Lockscreen charging info</string>
+    <string name="lockscreen_charging_current_summary">Display negociated charger max current and voltage on lockscreen</string>
+
 </resources>
