--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -750,7 +750,7 @@
     <string name="lockscreen_tweaks_title">Lock Tweaks</string>
 
     <!-- Lockscreen charging current indicator  -->
-    <string name="lockscreen_charging_current_title">Lockscreen charging info</string>
-    <string name="lockscreen_charging_current_summary">Display negociated charger max current and voltage on lockscreen</string>
+    <string name="lockscreen_battery_info_title">Lockscreen battery info indicator</string>
+    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
 
 </resources>
