Clock size and font [2/2]
Change-Id: I66eb90f34cec1078ada5b5f8e1b5e16f8c9966aa

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -212,6 +212,8 @@
     <string name="clock_date_style_lowercase">Lowercase</string>
     <string name="clock_date_style_uppercase">Uppercase</string>
     <string name="clock_date_format_custom">Custom java format</string>
+    <string name="clock_font_style_title">Font</string>
+    <string name="clock_font_size_title">Font size</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
 
