--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -450,5 +450,6 @@
     <string name="show_carrier_statusbar">Statusbar only</string>
     <string name="show_carrier_enabled">Lockscreen &amp; statusbar</string>
     <string name="status_bar_carrier_color">Carrier label color</string>
+    <string name="status_bar_carrier_size">Carrier label size</string>
 
 </resources>
