Battery Saver Easy Toggle [2/2]
Change-Id: Ic3b9723abf99ff8f603db1b8b5d4ba1af8c5cc87
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -817,4 +817,8 @@
     <!-- Disable music track title in QS tile -->
     <string name="qs_music_tile_track_optional_title">Music tile track title</string>
     <string name="qs_music_tile_track_optional_summary">Show the music track title as the QS tile title</string>
+
+    <!-- Battery Saver easy toggle -->
+    <string name="qs_battery_easy_toggle_title">Battery tile easy toggle</string>
+    <string name="qs_battery_easy_toggle_summary">Makes it so one click will turn Battery Saver on or off instead of taking you to settings</string>
 </resources>
