--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -742,4 +742,8 @@
     <string name="recents_clear_all_location_bottom_left">Bottom left</string>
     <string name="recents_clear_all_location_bottom_center">Bottom center</string>
 
+    <!-- Recents Membar -->
+    <string name="systemui_recents_mem_display_title">Show memory bar</string>
+    <string name="systemui_recents_mem_display_summary">Enable disable ram bar in recent app view</string>
+
 </resources>
