--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -945,4 +945,8 @@
     <string name="qs_fancy_animation_title">Fancy QS animation</string>
     <string name="qs_fancy_animation_summary">Enable a different animation effect when pulling down the statusbar</string>
 
+    <!-- qqs scroller -->
+    <string name="qqs_scroll_title">Scroll small QS tiles</string>
+    <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
+
 </resources>
