--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -168,5 +168,6 @@
 
     <!-- Notification Settings -->
     <string name="buttons_settings_title">Button Settings</string>
+    <string name="navbar_settings_title">Navigation Bar</string>
 
 </resources>
