Blissify: Add Buttons Category
Change-Id: I36eb7a143fad638ae466319addd8930e4d5c2402
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -166,4 +166,7 @@
     <string name="status_bar_notif_count_title">Show notification count</string>
     <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
 
+    <!-- Notification Settings -->
+    <string name="buttons_settings_title">Button Settings</string>
+
 </resources>
