--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -173,6 +173,7 @@
     <!-- Animation Settings -->
     <string name="animation_settings_title">Animation Settings</string>
     <string name="system_animation_title">System Animation</string>
+    <string name="toast_animation_title">Toast Animation</string>
 
     <!-- AOKP custom system animations -->
     <string name="animation_title">Animations</string>  
