--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -751,6 +751,6 @@
 
     <!-- Lockscreen charging current indicator  -->
     <string name="lockscreen_battery_info_title">Lockscreen battery info indicator</string>
-    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
+    <string name="lockscreen_battery_info_summary">Display real time charger current, voltage and battery temperature on lockscreen while charging</string>
 
 </resources>
