Blissify: Statusbar: Add Bliss Logo Tab
Change-Id: Iacc5481a89f4de65ba8958ddf4e19bf3e4081cad
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="clock_tab_title">Clock</string>
     <string name="statusbar_gestures_title">Gestures</string>
     <string name="statusbar_ticker_title">Ticker</string>
+    <string name="statusbar_bliss_logo">Bliss Logo</string>
 
     <!-- clock date options -->
     <string name="clock_title_enable">Alignment</string>
