--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -372,6 +372,8 @@
     <string name="smartbar_config_backup_error_toast">Error saving Smartbar profile</string>
     <string name="smartbar_config_restore_error_toast">Error restoring Smartbar profile</string>
     <string name="navbar_buttons_alpha_title">Button transparency</string>
+    <string name="smartbar_doubletap_sleep_title">Double tap to sleep</string>
+    <string name="smartbar_doubletap_sleep_summary">Double tap on navbar empty areas to switch off the screen</string>
 
    <!-- Lockscreen torch -->
     <string name="keyguard_torch_title">Lockscreen torch</string>
