--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -584,5 +584,14 @@
      <!-- Task Manager -->
     <string name="task_manager_title">Task Manager</string>
     <string name="enable_task_manager_summary">Enable/Disable action for the task manager button in the expanded statusbar area</string>
+    <string name="task_manager_kill_button">Kill task button</string>
+    <string name="task_manager_left_button_title">Notifications Button</string>
+    <string name="task_manager_left_button_summary">Enable/disable button in task manager to clear notifications</string>
+    <string name="task_manager_right_button_title">Services button</string>
+    <string name="task_manager_right_button_summary">Enable/disable button to access running services in task manager</string>
+    <string name="task_manager_kill_button_default">Default</string>
+    <string name="task_manager_kill_button_1">Circular</string>
+    <string name="task_manager_kill_button_2">Text</string>
+    <string name="task_manager_kill_button_3">Classic</string>
 
 </resources>
