Keyguard statusbar clock [2/2]
Change-Id: I13f1cb2ff88696e9328716fb364e469bad50dfe3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -759,4 +759,8 @@
     <string name="lockscreen_battery_info_title">Lockscreen battery info indicator</string>
     <string name="lockscreen_battery_info_summary">Display real time charger current, voltage and battery temperature on lockscreen while charging</string>
 
+    <!-- Keyguard Statusbar Clock -->
+    <string name="keyguard_statusbar_clock_title">Keyguard statusbar clock</string>
+    <string name="keyguard_statusbar_clock_summary">Show the left statusbar clock on the keyguard</string>
+
 </resources>
