--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -856,4 +856,8 @@
     <string name="qs_brightness_slider_title">Brightness slider</string>
     <string name="qs_brightness_slider_enabled">Enabled</string>
     <string name="qs_brightness_slider_disabled">Disabled</string>
+
+    <!-- Power menu torch -->
+    <string name="power_menu_torch_title">Torch</string>
+
 </resources>
