Blissify: Add Task Manager Tab in Notification Settings
Change-Id: I02a5987d25a73a397b860a95aee3765f2d8163b8
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -581,4 +581,7 @@
     <string name="blur_cat_notice">Notice</string>
     <string name="blur_cat_notice_summary">Blur personlizations are disabled during Keyguard view! Only Translucent Notifications are enabled!</string>
 
+     <!-- Task Manager -->
+    <string name="task_manager_title">Task Manager</string>
+
 </resources>
