--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -327,6 +327,7 @@
     <string name="lavamp_solid_speed_title">Lava Lamp speed</string>
     <string name="fling_lavalamp_color_from">Lava Lamp start color</string>
     <string name="fling_lavalamp_color_to">Lava Lamp end color</string>
+    <string name="pulse_solid_units_count">Solid lines count</string>
     <string name="pulse_solid_dimen_category">Solid lines mode settings</string>
 
     <!-- Pulse config -->
