Blissiy: add OmniJaws config
- Forward to service settings and icon pack
- Delete some old cruft

*DU Edit*
- Removed unused isOmniJawsEnabled method
- Removed search index stuff
- Add key to weather settings category - Shreesha

Change-Id: I3e3719223fb1cc75c6f57b63f9429a82fe754ec3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -949,4 +949,18 @@
     <string name="qqs_scroll_title">Scroll small QS tiles</string>
     <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
 
+    <!-- OmniJaws -->
+    <string name="weather_title">Weather</string>
+    <string name="weather_config_title">Service settings</string>
+    <string name="weather_config_summary"></string>
+    <string name="weather_icon_pack_title">Condition icon pack</string>
+
+    <!-- OmniJaws -->
+    <string name="qs_weather_title">OmniJaws</string> 
+    <string name="weather_config_title">Weather settings</string>
+    <string name="weather_config_summary"></string>
+    <string name="header_weather_title">Header view weather</string>
+    <string name="header_weather_summary">Enable notification panel header weather display</string>
+    <string name="weather_icon_pack_title">Condition icon pack</string>
+
 </resources>
