Blissify: Add Lockscreen Tweaks Tab
Change-Id: I57c739386f09a68212ae2593124192a4b2a0f38a
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -746,4 +746,7 @@
     <string name="systemui_recents_mem_display_title">Show memory bar</string>
     <string name="systemui_recents_mem_display_summary">Enable disable ram bar in recent app view</string>
 
+    <!-- Lockscreen Tweaks -->
+    <string name="lockscreen_tweaks_title">Lock Tweaks</string>
+
 </resources>
