Double tap to sleep on statusbar [2/2]
Change-Id: Id43a15806a3e5f62cdb88a2acf229a7cc384ba0b
Signed-off-by: Mihran Thalhath <mihranz7@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -307,6 +307,9 @@
     <!--Double Tap to Sleep Lockscreen-->
     <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
 
+    <!--Double Tap to Sleep Statusbar-->
+    <string name="double_tap_sleep_gesture_title">Double tap to sleep on status bar</string>
+
     <!-- Lockscreen weather -->
     <string name="lockscreen_weather_title">Show weather condition</string>
     <string name="lockscreen_weather_summary">Show current weather condition and temperature</string>
