--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1066,4 +1066,17 @@
     <!-- Summaries For Forgotten Ones -->
     <string name="gesture_anywhere_summary">Gesture Anywhere Settings</string>
 
+    <!-- Buttons backlight timeout -->
+    <string name="hardware_backlight_category">HW Key Backlight</string>
+    <string name="backlight_timeout_title">Buttons backlight timeout</string>
+    <string name="backlight_timeout_on">Enabled always</string>
+    <string name="backlight_timeout_3s">3 sec</string>
+    <string name="backlight_timeout_default">5 sec (default)</string>
+    <string name="backlight_timeout_10s">10 sec</string>
+    <string name="backlight_timeout_15s">15 sec</string>
+    <string name="backlight_timeout_20s">20 sec</string>
+    <string name="backlight_timeout_30s">30 sec</string>
+    <!-- Enable keys backlight-->
+    <string name="button_brightness_title">Backlight</string>
+
 </resources>
