Blissify: Add Tablayout viewpager implementation - Add Animation and Button Categories - Add System and Toast Animation Tab Fragments - Add Test Content just for Testing purpose
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,7 @@
     <string name="qs_category">Quick Settings</string>
     <string name="recents_category">Recents</string>
     <string name="statusbar_category">Statusbar</string>
+    <string name="system_animation_title">System</string>
+    <string name="toast_animation_title">Toast</string>
 
 </resources>
