Blissify: Add QSTile Animations Tab - Refactor all animations tabs to animations - Minor Fixes
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -8,4 +8,5 @@
     <string name="qs_category">Quick Settings</string>
     <string name="recents_category">Recents</string>
     <string name="statusbar_category">Statusbar</string>
+    <string name="qstiles_animation_title">QS Tile</string>
 </resources>
