Use old mobile type signal icons
Change-Id: I47e6edec4d4e933c5b431002b0f3d502ccd500af

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -162,5 +162,9 @@
     <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
     <string name="network_traffic_hidearrow">Hide arrows</string>
     <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
+
+    <string name="use_old_mobiletype_title">Use old mobile type style</string>
+    <string name="use_old_mobiletype_summary">Merge signal and type icons</string>
+
     
 </resources>
