--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -186,5 +186,12 @@
     <string name="use_old_mobiletype_title">Use old mobile type style</string>
     <string name="use_old_mobiletype_summary">Merge signal and type icons</string>
 
+    <string name="lockscreen_ui_title">UI options</string>
+
+    <!-- Lockscreen weather -->
+    <string name="lockscreen_weather_title">Show weather condition</string>
+    <string name="lockscreen_weather_summary">Show current weather condition and temperature</string>
+    <string name="lockscreen_items_aod_info_title">This visibility configuration also applies to the ambient display</string>
+
     
 </resources>
