--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -208,5 +208,9 @@
     <string name="lockscreen_power_menu_disabled_title">Disable power menu when locked</string>
     <string name="lockscreen_power_menu_disabled_summary">Disable power menu on secure lock screens</string>
 
+    <!-- Media art -->
+    <string name="media_art_title">Media cover art</string>
+    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
+
     
 </resources>
