Create Buttons tab for NavBar
Change-Id: I9b6c5249a833d0e79c2ddf8b131f60a0303cc825

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,6 +36,9 @@
     <string name="recents_category">Recents</string>
     <string name="statusbar_category">Statusbar</string>
 
+    <!-- Tabs Titles -->
+    <string name="buttons_navbar_title">NavBar</string>
+
     <!-- Animation -->
     <string name="system_animation_title">System</string>
     <string name="toast_animation_title">Toast</string>
