--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,6 +38,7 @@
 
     <!-- Tabs Titles -->
     <string name="buttons_navbar_title">NavBar</string>
+    <string name="buttons_volume_title">Volume</string>
 
     <!-- Animation -->
     <string name="system_animation_title">System</string>
