Create buttons power tab
Change-Id: Ic4a72b1d1529052c6de290c45e43bcd302e1cd6a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,6 +38,7 @@
 
     <!-- Tabs Titles -->
     <string name="buttons_navbar_title">NavBar</string>
+    <string name="buttons_power_title">Power</string>
     <string name="buttons_volume_title">Volume</string>
 
     <!-- Animation -->
