Blissify: implement OP like navigation gestures [2/2]
Change-Id: Idee7ba26be783354fb3f1f4173ac2191935a87cc

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -247,6 +247,8 @@
     <!-- Navbar -->
     <string name="navigation_bar_show_title">Show navigation bar</string>
     <string name="navigation_bar_show_summary">Force enable navigation bar</string>
+    <string name="use_bottom_gesture_title">Use swipe up gestures for navigation</string>
+    <string name="use_bottom_gesture_summary">Must hide navbar. Swipe up from left/right is back. Swipe up center is home. Swipe up and hold is recents</string>
     <string name="show_navbar_arrow_keys_title">Show arrow keys while typing</string>
     <string name="show_navbar_arrow_keys_summary">Display left and right cursor buttons in navigation bar while typing.</string>
 
@@ -254,5 +256,4 @@
     <string name="media_art_title">Media cover art</string>
     <string name="media_art_summary">Enable media cover art on the lockscreen</string>
 
-    
 </resources>
