--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -62,6 +62,21 @@
     <string name="color_default">Default</string>
     <string name="unit_x1000ms">x1000 ms</string>
 
+    <!--SystemUI Tuner -->
+    <string name="statusbar_tuner_title">Statusbar tuner</string>
+    <string name="statusbar_tuner_summary">Battery options and statusbar icons to disable</string>
+    <string name="navbar_tuner_title">NavBar tuner</string>
+    <string name="navbar_tuner_summary">Edit the navigation bar layout and buttons</string>
+    <string name="lockscreen_shortcuts_title">Lockscreen tuner</string>
+    <string name="lockscreen_shortcuts_summary">Manage lockscreen bottom shortcuts</string>
+    <string name="vol_dnd_category_title">Do not disturb mode</string>
+    <string name="volbtn_down_zen_title">Volume down for do not disturb</string>
+    <string name="volbtn_down_zen_summary">allow volume down to enter do not disturb mode</string>
+    <string name="volbtn_up_zen_title">Volume up in do not disturb</string>
+    <string name="volbtn_up_zen_summary">allow volume up to exit do not disturb mode</string>
+    <string name="vol_zen_title">Do not disturb switch</string>
+    <string name="vol_zen_summary">Show do not disturb swith on volume panel</string>
+
     <!-- Battery customizations -->
     <string name="battery_style_category">Battery</string>
     <string name="battery_style_title">Battery style</string>
