Powermenu to Interface category
Change-Id: I5bc2c3b28ff6a463adbf6dcd4774427c55c11879

--- a/res/values-v21/strings.xml
+++ b/res/values-v21/strings.xml
@@ -4,7 +4,7 @@
     <string name="button_category">Buttons</string>
     <string name="gestures_category">Gestures</string>
     <string name="lockscreen_category">Lockscreen</string>
-    <string name="power_category">Power Menu</string>
+    <string name="interface_category">Interface</string>
     <string name="qs_category">Quick Settings</string>
     <string name="recents_category">Recents</string>
     <string name="statusbar_category">Statusbar</string>
