--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="buttons_navbar_title">NavBar</string>
     <string name="buttons_power_title">Power</string>
     <string name="buttons_volume_title">Volume</string>
+    <string name="interface_theme_title">Theme</string>
 
     <!-- Animation -->
     <string name="system_animation_title">System</string>
