Create Misc tab in Interface Category
Change-Id: I27dc8b3d29ec14e6a7ea002d4624337b75cee469

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="buttons_power_title">Power</string>
     <string name="buttons_volume_title">Volume</string>
     <string name="interface_theme_title">Theme</string>
+    <string name="interface_misc_title">Misc</string>
 
     <!-- Animation -->
     <string name="system_animation_title">System</string>
